--- a/ITMO.ADO.NET-Practice03-DBCommand/DBCommand.resx
+++ b/ITMO.ADO.NET-Practice03-DBCommand/DBCommand.resx
@@ -132,6 +132,9 @@
   <metadata name="sqlCommandQueryWithParameters.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>25, 72</value>
   </metadata>
+  <metadata name="sqlCommandCallSpWithParameters.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>269, 72</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>341</value>
   </metadata>
